# patrol-car-pi5

./: .gitignore  ARCHITECTURE.md  Dockerfile  README.md  Rosmaster_Lib.py  docker-compose.yml  explore_runner.py  nav2_explore.py
.hermes/plans/: 2026-07-18_180000-slam-web-panel.md
config/: 99-yahboomcar.rules  nav2_params.yaml  slam_params.yaml  twist_mux_topics.yaml
docs/: P0-fix-summary-20260717.md  debug-motor-watchdog.md  debug-rules.md  debug-slam-web-20260718.md  restart-verification.json  slam-progress-20260719.md  slam-web-build-log.md  slam-web-design.md  操作手册.md
maps/: README.md  map_1784276257.yaml  slam_run3.pgm  slam_run3.yaml
patrol_robot/: Dockerfile  docker-compose.yml
patrol_robot/config/: alert_rules.yaml  nav2_params.yaml  patrol_routes.yaml  slam_params.yaml
patrol_robot/docs/: architecture.md  hardware_bom.md
patrol_robot/patrol_robot/src/: _cam_check.py  simple_camera.py  ydlidar_driver.py
patrol_robot/patrol_robot/src/Speech_Lib/: Speech_Lib.py
patrol_robot/patrol_robot/src/patrol_alert/: package.xml  setup.cfg  setup.py
patrol_robot/patrol_robot/src/patrol_alert/launch/: patrol_alert.launch.py
patrol_robot/patrol_robot/src/patrol_alert/patrol_alert/: alert_dispatcher.py
patrol_robot/patrol_robot/src/patrol_bringup/: package.xml  setup.cfg  setup.py
patrol_robot/patrol_robot/src/patrol_bringup/launch/: patrol_all.launch.py
patrol_robot/patrol_robot/src/patrol_manager/: package.xml  setup.cfg  setup.py
patrol_robot/patrol_robot/src/patrol_manager/config/: manager_params.yaml
patrol_robot/patrol_robot/src/patrol_manager/launch/: patrol_manager.launch.py
patrol_robot/patrol_robot/src/patrol_manager/patrol_manager/: patrol_state_machine.py
patrol_robot/patrol_robot/src/patrol_voice/: package.xml  setup.cfg  setup.py
patrol_robot/patrol_robot/src/patrol_voice/launch/: patrol_voice.launch.py
patrol_robot/patrol_robot/src/patrol_voice/patrol_voice/: voice_node.py
patrol_robot/patrol_robot/src/patrol_web/: package.xml  setup.cfg  setup.py
patrol_robot/patrol_robot/src/patrol_web/launch/: patrol_web.launch.py
patrol_robot/patrol_robot/src/patrol_web/patrol_web/: web_server.py
patrol_robot/patrol_robot/src/patrol_web/templates/: dashboard.html
patrol_robot/patrol_robot/src/patrol_yolo/: package.xml  setup.cfg  setup.py
patrol_robot/patrol_robot/src/patrol_yolo/config/: yolo_params.yaml
patrol_robot/patrol_robot/src/patrol_yolo/launch/: patrol_yolo.launch.py
patrol_robot/patrol_robot/src/patrol_yolo/patrol_yolo/: yolo_detector.py
patrol_robot/scripts/: container_init.sh  deploy_rpi5.sh  download_model.py  joy2vel.py  patrol_start.sh  patrol_start_docker.sh  start_drivers.sh  start_joy.sh  yahboom_oled.py  yahboom_oled.service
patrol_robot/src/: Rosmaster_Lib.py  simple_camera.py
patrol_robot/src/patrol_bridge/patrol_bridge/: cmd_vel_bridge.py
patrol_robot/src/patrol_voice/patrol_voice/: voice_node.py
patrol_robot/src/patrol_web/patrol_web/: web_server.py
scripts/: bare_minimum.py  check_slam.sh  container_init.sh  diag.py  find_stm32.py  map_bridge.py  odom_tf.py  pi_ssh.py  restart_3rounds.py  restart_check.py  robot_tf.py  slam_aio_v3.py  slam_all_in_one.py  slam_nav_init.sh  slam_node.py  slam_start.sh  slam_web_start.sh  start_slam.sh  stop_slam.sh  test_baud.py  test_pub_sub.py  test_scan.py  test_sdk.py  x4_driver.py  ydlidar_direct.py
src/patrol_bridge/: package.xml  setup.cfg  setup.py
src/patrol_bridge/patrol_bridge/: cmd_vel_bridge.py
src/patrol_robot/src/: ydlidar_driver.py
src/patrol_voice/launch/: patrol_voice.launch.py
src/patrol_voice/patrol_voice/: voice_node.py
src/patrol_web/patrol_web/: web_server.py
src/patrol_web/templates/: dashboard.html
src/slam_web/: package.xml  setup.py
src/slam_web/slam_web/: web_server.py
src/slam_web/templates/: cam_part.html  slam.html
tests/: t1_serial.py  t2_rosmaster.py  t3_bridge.py  t4_send.py  t5_deep.py  t6_diag.py  t7_hz.py  t8_bridge_v1.py  t8_bridge_v2.py  t8_test_publisher.py  t9_ydlidar_debug.py
udev/: 99-x3-devices.rules
