<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>patrol_bridge</name>
  <version>1.0.0</version>
  <description>底盘桥: /cmd_vel → Rosmaster STM32 (含 10Hz heartbeat 对抗 watchdog)</description>
  <maintainer email="lichengdong@example.com">lichengdong</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
